proxy-svc-20161018.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: ui
  name: proxy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    name: proxy
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
