registry2-svc-20161122.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: registry2
  name: registry2
spec:
  ports:
  - name: port-1
    port: 5000
    protocol: TCP
    targetPort: 5000
  - name: port-2
    port: 5001
    protocol: TCP
    targetPort: 5001
  selector:
    name: registry2
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
