registry3-svc-20161125.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: registry3
  name: registry3
spec:
  ports:
  - name: port-1
    port: 5000
    protocol: TCP
    targetPort: 5000
  - name: port-2
    port: 5001
    protocol: TCP
    targetPort: 5001
  selector:
    name: registry3
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
