ui-svc-20161018.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: ui
  name: ui
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: ui
  sessionAffinity: ClientIP 
  type: ClusterIP
status:
  loadBalancer: {}
