ui2-svc-20161122.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: ui2
  name: ui2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: ui2
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
