ui3-svc-20161125.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: ui3
  name: ui3
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: ui3
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
