ui4-svc-20161125.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: ui4
  name: ui4
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: ui4
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
