route.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      name: ui
    name: proxy
  spec:
    host: harbor.10.76.3.11.xip.io
    port:
      targetPort: http
    to:
      kind: Service
      name: proxy
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2016-11-06T16:25:41Z
        status: "True"
        type: Admitted
      host: harbor.10.76.3.11.xip.io
      routerName: router
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      name: registry
    name: registry
  spec:
    host: registry-harbor.10.76.3.11.xip.io
    port:
      targetPort: port-1
    to:
      kind: Service
      name: registry
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2016-11-06T16:25:28Z
        status: "True"
        type: Admitted
      host: registry-harbor.10.76.3.11.xip.io
      routerName: router
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      name: ui
    name: ui
  spec:
    host: ui-harbor.10.76.3.11.xip.io
    to:
      kind: Service
      name: ui
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2016-11-06T16:25:11Z
        status: "True"
        type: Admitted
      host: ui-harbor.10.76.3.11.xip.io
      routerName: router
kind: List
metadata: {}
